# Movie-Recommendation-App

./: Makefile  README.md  clean.py  pyproject.toml
.github/actions/build_application/: action.yml
.github/workflows/: lint.yml
src/: movies.csv  runner_builder.py  runner_builder_nmf.py  runner_builder_svd.py  runner_prediction.py  runner_prediction_nmf.py  runner_prediction_svd.py
src/build_models/: model_builder.py  model_inference.py
src/build_models/pipeline/: collection.py  nmf.py  preprocess.py  surprise_item_cf.py  surprise_svd.py
src/config/: .env  model_config.py
